--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "trae": "^1.4.2",
     "vue": "^2.4.4",
+    "vue-lodash": "^1.0.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
