--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "shoppin-car-rappi",
-  "description": "Shopping car Rapii",
+  "name": "Fake-shopping-car-rappi",
+  "description": "Fake Shopping car Rapii",
   "version": "1.0.0",
-  "author": "falemusb@correo.udistrital.edu.co",
+  "author": "sumel124@gmail.com",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bulma": "^0.6.2",
+    "install": "^0.10.4",
+    "lodash": "^4.17.5",
     "trae": "^1.4.2",
-    "vue": "^2.4.4"
+    "vue": "^2.4.4",
+    "vue-lodash": "^1.0.4",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
