--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Fake-shopping-car-rappi",
+  "name": "Fake-shopping-car-rappiis",
   "description": "Fake Shopping car Rapii",
   "version": "1.0.0",
   "author": "sumel124@gmail.com",
@@ -9,36 +9,38 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "bulma": "^0.6.2",
-    "install": "^0.10.4",
+    "bulma": "^0.4.3",
     "lodash": "^4.17.5",
+    "serve": "^6.0.2",
     "trae": "^1.4.2",
-    "vue": "^2.4.4",
+    "vue": "^2.3.3",
     "vue-lodash": "^1.0.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.10.0",
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^3.0.0",
+    "css-loader": "^0.25.0",
+    "eslint": "^4.1.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.2.2",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-html": "^3.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.0",
+    "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "file-loader": "^1.1.4",
-    "node-sass": "^4.5.3",
-    "pug": "^2.0.0-rc.4",
+    "file-loader": "^0.9.0",
+    "node-sass": "^4.5.0",
+    "pug": "^2.0.0-rc.2",
     "pug-loader": "^2.3.0",
-    "sass-loader": "^6.0.6",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "sass-loader": "^5.0.1",
+    "vue-loader": "^12.1.0",
+    "vue-template-compiler": "^2.3.3",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
